# lr1-visualizer

./: .gitignore  README.md  funcionamiento.md  setup.sh
.cursor/commands/: fix-problems.md
backend/: .coverage  INTERACTIVE_DERIVATION_SUMMARY.md  README.md  __init__.py  main.py  pyproject.toml  requirements.txt  setup.py  simple_setup.py  test_fix.py
backend/api/: __init__.py  routes.py
backend/debug/: __init__.py  api_validator.py  cli.py  inspector.py  logger.py  profiler.py  validators.py  web_debugger.py
backend/examples/: __init__.py  arithmetic.py  data_structures.py  edge_cases.py  mathematical.py  programming.py  test_examples.py
backend/lr1_parser_visualizer_backend.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
backend/parser/: __init__.py  automaton.py  engine.py  grammar.py  grammar_v2.py  items.py  lark_grammar.py  lark_grammar_v2.py  sample_generator.py  table.py  types.py
backend/tests/: __init__.py  conftest.py  test_automaton.py  test_grammar.py  test_interactive_derivation.py  test_items.py  test_table.py
backend/utils/: debug.py
docs/: parsing_explained.md  progress.md
frontend/: index.html  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/api/: client.ts
frontend/src/components/: ASTVisualizer.tsx  ActionTracePanel.tsx  AutomatonTab.tsx  AutomatonView.tsx  DebugPanel.tsx  DerivationVisualizer.tsx  ErrorBoundary.tsx  ErrorDisplay.tsx  ExamplesModal.tsx  ExamplesPanel.tsx  GrammarConfigTab.tsx  GrammarEditor.tsx  Header.tsx  InputPanel.tsx  LoadingSpinner.tsx  ParsingTable.tsx  ParsingVisualizationTab.tsx  StackVisualizer.tsx  StepControls.tsx
frontend/src/hooks/: useDebugMode.ts  useKeyboardShortcuts.ts
frontend/src/store/: parserStore.ts
frontend/src/types/: parser.ts
frontend/src/utils/: apiDebug.ts  dataValidator.ts  debug.ts  logger.ts
